@@ -4,6 +4,6 @@
 #include "ilu_internal.h"
 
 const ILdouble IL_PI      = 3.1415926535897932384626;
-const ILdouble  IL_DEGCONV = 0.0174532925199432957692;
+const ILdouble IL_DEGCONV = 0.0174532925199432957692;
 ILimage *iluCurImage = NULL;
 
